--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@
 resolver = "2"
 
 members = [
-    "crates/event-runtime", "crates/event-subscriber", "crates/publish-event",
+    "crates/event-subscriber", 
+    "crates/publish-event",
     "playground/basic-run",
     "tokio-event-adapter"
 ]
